--- a/src/app/(demos)/moon-phase/page-copy.mdx
+++ b/src/app/(demos)/moon-phase/page-copy.mdx
@@ -11,13 +11,13 @@ A React component that draws an <abbr title="Scalable Vector Graphics">SVG</abbr
 
 ## Backstory
 
-I wanted to build a simple web browser extension that diplayed the current phase of the moon when I opening a new tab. I decided to use the [Visual Crossing Weather Data & API](https://www.visualcrossing.com/) which returns the data I need. Now all I needed to do was figure out how to draw a picture of the moon in a web browser at every possible phase. Fun!
+I wanted to build a simple web browser extension that diplayed the current phase of the moon when I opened a new tab. I decided to use the [Visual Crossing Weather Data & API](https://www.visualcrossing.com/) to retreive daily moon data. Now all I needed to do was figure out how to draw a picture of the moon in a web browser at every possible phase. Fun!
 
 Oh, wait! *...How do we even do that?!?!?!*
 
 ## Circle Structure
 
-My design-brain informed me that I needed to start with a circle composed of points placed at the top, right, bottom, and left-most ends of the circumference of the circle. With a structure like this I should be able to adjust the coordinates of the left or right points to create the illusion of a shadowed moon.
+My design-brain informed me that I need to start with a circle composed of points placed at the top, right, bottom, and left-most ends of the circumference of a circle. Once these points exist, it should be pretty easy to connect them with cubic bezier curves. With a structure like this it should be possible to adjust the coordinates of the left or right points along with the handles of the top and bottom points to create the illusion of a shadowed moon.
 
 <figure className="figure">
   <div className="figure-subject">
