Rename a few things

--- a/src/app/(demos)/moon-phase/page-copy.mdx
+++ b/src/app/(demos)/moon-phase/page-copy.mdx
@@ -1,4 +1,4 @@
-import { SvgDemo } from './svg-demo'
+import { Demo } from './demo'
 import { FigureCubicCircle } from './figure-cubic-circle'
 import { Svg as CubicCircle } from './figure-cubic-circle'
 import { colors as c } from '@/colors'
@@ -7,7 +7,7 @@ import { colors as c } from '@/colors'
 
 A React component that draws an <abbr title="Scalable Vector Graphics">SVG</abbr> path that illustrates a given phase of the moon.
 
-<SvgDemo diameter={300} />
+<Demo diameter={300} />
 
 ## Backstory
 
