--- a/src/app/(demos)/pie-chart/page-copy.mdx
+++ b/src/app/(demos)/pie-chart/page-copy.mdx
@@ -1,8 +1,12 @@
-import { SvgDemo } from './svg-demo'
+import { Demo } from './demo'
 
 # Pie Chart
 
-<SvgDemo />
+<Demo />
+
+## Inspiration
+
+Once upon a time, I was creating a teensy little app that would help me visualize information of some-sort and I wanted to include a pie chart. Unfortunately, I was unable to pin down a simple React component that did this for me.
 
 ## Interface
 
