Add html demo for first isolation.

--- a/src/app/(mini)/animated-circular-border/page-copy.mdx
+++ b/src/app/(mini)/animated-circular-border/page-copy.mdx
@@ -1,7 +1,12 @@
 import { Circle } from './code/animated-circular-border'
+import { HtmlDemo } from '@/components/demo-html'
 
 # Animated Circular Border
 
 I came across [this short video](https://youtube.com/shorts/BiYBJ9PIbrw) that demonstates a process that creates a really nice animated border effect on circluar elements using CSS.
 
-<Circle>A</Circle>
+<HtmlDemo
+  src="/isolations/html/animated-circular-border.html"
+  width="500"
+  height="700"
+/>
