Refactor figures and nameplate. Again?

--- a/src/app/(main)/iso/animated-circular-border/page-copy.mdx
+++ b/src/app/(main)/iso/animated-circular-border/page-copy.mdx
@@ -1,11 +1,10 @@
-import { Circle } from './code/animated-circular-border'
-import { HtmlDemo } from '@/components/demo-html'
+import { FigureFile } from '@/components/figure-file'
 
 # Animated Circular Border
 
 I came across [this short video](https://youtube.com/shorts/BiYBJ9PIbrw) that demonstates a process that creates a really nice animated border effect on circluar elements using CSS.
 
-<HtmlDemo
+<FigureFile
   src="/isolations/html/animated-circular-border.html"
   width="500"
   height="700"
