--- a/src/app/(main)/(home)/page-copy.mdx
+++ b/src/app/(main)/(home)/page-copy.mdx
@@ -2,3 +2,4 @@ This is a place where I can doucment various JavaScript experiments and mini-pro
 
 - [Isolations](/isolations/iso)
 - [SVG](/isolations/svg)
+- [Bugs](/isolations/bug)
